Scale up shelf items only if shelf is not auto-hide.

Bug: 772459
Change-Id: I33c9767216bb5d95048b151347fdc7ed8f69a302